[package]
name = "external-client-rust"
version = "0.1.0"
authors = ["Francisco Castellanos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }

[dev-dependencies]
httpmock = "0.3.3"